sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:90: error: not found: value posEchange
    deplace(mod(currBase-1, nbBases), posEchange);
                                      ^SelectBaseball:97: error: not found: value posEchange
  deplace(mod(currBase-1, nbBases), posEchange);
                                    ^